--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -166,3 +166,50 @@ html body h1 {
   font-size: 10px;
   font-style: italic;
 }
+#stock {
+  text-align: center;
+}
+#stock #actions {
+  margin: 10px auto;
+  width: 350px;
+}
+#stock nav,
+#stock .nav-tabs {
+  margin-top: 10px;
+}
+#stock nav a,
+#stock .nav-tabs a {
+  color: #040d14;
+}
+#stock nav .active,
+#stock .nav-tabs .active {
+  font-weight: bold;
+}
+#stock table {
+  border: 1px solid #21ce99;
+  width: 100%;
+}
+#stock table input {
+  width: 70px;
+  padding: 2px 5px;
+  text-align: center;
+}
+#stock table tr td {
+  padding: 10px;
+}
+#stock table tr td:nth-of-type(1) {
+  width: 50%;
+  text-align: left;
+}
+#stock table tr td:nth-of-type(2) {
+  width: 50%;
+  padding-left: 20px;
+  text-align: right;
+}
+#stock table tr a {
+  color: #040d14;
+}
+#stock button {
+  margin-top: 10px;
+}
+/*# sourceMappingURL=app.css.map */
