--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -145,3 +145,36 @@ html
     margin-top 10px
     font-size 10px
     font-style italic
+
+#stock
+  text-align center
+  #actions
+    margin 10px auto
+    width 350px
+  nav,.nav-tabs
+    margin-top 10px
+    a
+      color c1
+    .active
+      font-weight bold
+  table
+    border 1px solid c2
+    width 100%
+    input
+      width 70px
+      padding 2px 5px
+      text-align center
+    tr
+      td
+        padding 10px
+        &:nth-of-type(1)
+          width 50%
+          text-align left
+        &:nth-of-type(2)
+          width 50%
+          padding-left 20px
+          text-align right
+      a
+        color c1
+  button
+    margin-top 10px
