--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -169,9 +169,12 @@ html body h1 {
 #stock {
   text-align: center;
 }
+#stock #last-price span {
+  margin-left: 5px;
+}
 #stock #actions {
   margin: 10px auto;
-  width: 350px;
+  width: 400px;
 }
 #stock nav,
 #stock .nav-tabs {
@@ -190,7 +193,7 @@ html body h1 {
   width: 100%;
 }
 #stock table input {
-  width: 70px;
+  width: 80px;
   padding: 2px 5px;
   text-align: center;
 }
@@ -198,12 +201,9 @@ html body h1 {
   padding: 10px;
 }
 #stock table tr td:nth-of-type(1) {
-  width: 50%;
   text-align: left;
 }
 #stock table tr td:nth-of-type(2) {
-  width: 50%;
-  padding-left: 20px;
   text-align: right;
 }
 #stock table tr a {
@@ -211,5 +211,11 @@ html body h1 {
 }
 #stock button {
   margin-top: 10px;
+}
+#orders button {
+  border-radius: 20px;
+  background-color: #21ce99;
+  color: #fff;
+  padding: 0 10px;
 }
 /*# sourceMappingURL=app.css.map */
