--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -174,6 +174,8 @@ html
         color c1
   button
     margin-top 10px
+  #action-error
+    color red
 
 #orders
   button
@@ -181,3 +183,9 @@ html
     background-color c2
     color c0
     padding 0 10px
+
+#share
+  text-align center
+  margin 20px
+  div
+    margin-top 10px
