--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -189,3 +189,14 @@ html
   margin 20px
   div
     margin-top 10px
+
+.highcharts-credits
+    display none
+
+.bold
+  font-weight bold
+
+#stock-chart
+  height 160px
+  a
+    color c1
