--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -36,7 +36,11 @@ html
     text-align center
     padding 10px
     a
-      color c2
+      border-radius 30px
+      color c0
+      padding 5px 10px
+      background-color red
+      font-weight bold
   li
     margin-left 15px
     display inline
