Add robo investing promo

--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -204,3 +204,11 @@ html
   height 160px
   a
     color c1
+
+#robo
+  text-align center
+  h5
+    margin 10px
+  #onlist
+    font-size 22px
+    color c2
