--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -241,4 +241,14 @@ html body h1 {
 #stock-chart a {
   color: #040d14;
 }
+#robo {
+  text-align: center;
+}
+#robo h5 {
+  margin: 10px;
+}
+#robo #onlist {
+  font-size: 22px;
+  color: #21ce99;
+}
 /*# sourceMappingURL=app.css.map */
