--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -8,6 +8,7 @@ html
   font-size 14px
   body
     font-family Montserrat,sans-serif
+    min-width 650px
     input[type=submit],button
       cursor pointer
       background-color c2
@@ -77,6 +78,22 @@ html
   margin 0
   padding 0
   height 0
+  #news
+    text-align center
+    font-size 12px
+    padding 10px
+    background-color c2
+    color c0
+    #news-text
+      margin 0 20px
+    a
+      color c0
+    .link
+      position relative
+    #prevNews
+      float left
+    #nextNews
+      float right
 
 #properties-table
   margin 0
