--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -197,6 +197,35 @@ html
     margin-top 10px
   #action-error
     color red
+  #stock-news
+    margin-top 40px
+    .news-container
+      .clear
+        clear both
+        padding 20px 0
+      .left-img
+        width 20%
+        float left
+        img
+          width 100%
+      .stock-news-story
+        float right
+        width 80%
+        padding-left 20px
+        text-align left
+        h5
+          font-size 12px
+          margin 0
+          .time
+            color c1
+        h4
+          font-size 14px
+          margin 0
+          a
+            color c2
+        .summary
+          color c1
+          font-size 12px
 
 #orders
   button
