--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -79,17 +79,18 @@ html
   padding 0
   height 0
   #news
+    h4
+      padding 0
+      margin 0
     text-align center
     font-size 12px
     padding 10px
     background-color c2
     color c0
     #news-text
-      margin 0 20px
+      background-color c2
     a
       color c0
-    .link
-      position relative
     #prevNews
       float left
     #nextNews
@@ -200,8 +201,6 @@ html
   #stock-news
     margin-top 40px
     .news-container
-      .clear
-        clear both
         padding 20px 0
       .left-img
         width 20%
@@ -258,3 +257,5 @@ html
   #onlist
     font-size 22px
     color c2
+.clear
+  clear both
