--- a/src/styles/stylus/app.styl
+++ b/src/styles/stylus/app.styl
@@ -201,7 +201,6 @@ html
   #stock-news
     margin-top 40px
     .news-container
-        padding 20px 0
       .left-img
         width 20%
         float left
@@ -225,6 +224,8 @@ html
         .summary
           color c1
           font-size 12px
+    .clear
+      padding 10px
 
 #orders
   button
